--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "web_news_scraper",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "All the News That's Fit to Scrape",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,13 @@
   },
   "homepage": "https://github.com/dcoleslaw86/web_news_scraper#readme",
   "dependencies": {
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
-    "express-handlebars": "^5.0.0"
+    "express-handlebars": "^4.0.6",
+    "mongoose": "^5.9.23",
+    "morgan": "^1.10.0",
+    "request": "^2.88.2"
   }
 }
